--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
-streamlit
+langchain>=0.1.0
+langchain-community>=0.0.13
+langgraph>=0.0.20
+streamlit>=1.28.0
+pydantic>=2.4.2
+ollama>=0.1.6
+PyMuPDF>=1.23.7  # for PDF processing
+openpyxl>=3.1.2  # for Excel processing
+pandas>=2.1.2
+numpy>=1.26.1
+jinja2>=3.1.2
+SQLAlchemy>=2.0.23
+python-dotenv>=1.0.0
+watchdog>=3.0.0  # needed for Streamlit live reloading
+transformers>=4.35.0  # for embedding generation (optional)
+ipykernel
