--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "fastapi>=0.115.12",
     "graphviz>=0.20.3",
     "ipykernel>=6.29.5",
-    "jinja2>=3.1.2",
     "langchain>=0.1.0",
     "langchain-community>=0.0.13",
     "langchain-core>=0.3.60",
@@ -24,13 +23,11 @@ dependencies = [
     "pydantic>=2.4.2",
     "pymupdf>=1.23.7",
     "pypdf2>=3.0.1",
-    "python-docx>=1.1.2",
+    "python-docx>=0.8.11",
     "python-dotenv>=1.0.0",
-    "requests>=2.32.3",
-    "sentence-transformers>=2.2.2",
-    "sqlalchemy>=2.0.23",
+    "python-multipart>=0.0.20",
+    "requests>=2.31.0",
     "streamlit>=1.28.0",
-    "transformers>=4.35.0",
     "uvicorn>=0.34.2",
     "watchdog>=3.0.0",
     "xlsxwriter>=3.2.3",
