--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,14 @@ PyMuPDF>=1.23.7  # for PDF processing
 openpyxl>=3.1.2  # for Excel processing
 pandas>=2.1.2
 numpy>=1.26.1
-SQLAlchemy>=2.0.23
 python-dotenv>=1.0.0
 watchdog>=3.0.0  # needed for Streamlit live reloading
 ipykernel
 matplotlib
-graphviz
 uvicorn
 fastapi
+python-multipart  # Required for FastAPI file uploads
 pdfplumber
-sentence-transformers>=2.2.2
-faiss-cpu>=1.7.4
 numpy>=1.21.0
 # Additional dependencies for document processing
 PyPDF2>=3.0.1
